force-app/main/default/objects/Blacklisted_Customer__c/Blacklisted_Customer__c.object-meta.xml
<CustomObject>
    <label>Blacklisted Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blacklisted Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>