force-app/main/default/objects/Blacklisted_Customer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blacklisted Customers</relationshipLabel>
    <relationshipName>Blacklisted_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>