force-app/main/default/objects/Blacklisted_Customer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Blacklisted Customers</relationshipLabel>
    <relationshipName>Blacklisted_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>