force-app/main/default/objects/Blacklisted_Customer__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Blacklisted Customers</relationshipLabel>
    <relationshipName>Blacklisted_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>